The egl backend is much nicer than glx
- it is from picom 10.2
- undocumented yet

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -8,7 +8,7 @@
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "glx";
+backend = "egl";
 # backend = "xrender";
 
 # Enable/disable VSync.
